kubernetes/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-flask
  name: hello-flask
spec:
  selector:
    matchLabels:
      app: hello-flask
  template:
    metadata:
      labels:
        app: hello-flask
    spec:
      containers:
      - image: 866421524471.dkr.ecr.us-east-2.amazonaws.com/hello-flask:TAG
        imagePullPolicy: IfNotPresent
        name: hello-flask
        ports:
        - containerPort: 5000
          protocol: TCP
      nodeSelector:
        node.kubernetes.io/nodegroup: build-0
