kubernetes/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-flask-NUMBER
    role: green
  name: hello-flask-NUMBER
spec:
  selector:
    matchLabels:
      app: hello-flask-NUMBER
  template:
    metadata:
      labels:
        app: hello-flask-NUMBER
        role: green
    spec:
      containers:
      - image: 866421524471.dkr.ecr.us-east-2.amazonaws.com/hello-flask:NUMBER
        imagePullPolicy: IfNotPresent
        name: hello-flask-NUMBER
        ports:
        - containerPort: 5000
          protocol: TCP
      nodeSelector:
        node.kubernetes.io/nodegroup: build-NUMBER
