kubernetes/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-flask-0
    role: blue
  name: hello-flask-0
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: hello-flask-0
