kubernetes/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-flask-GREEN
    role: green
  name: hello-flask-GREEN
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: hello-flask-GREEN
