kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-flask
  name: hello-flask
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: hello-flask
  type: LoadBalancer
